#        the FastFeedback IOC Application.        
#
#  Auth: 19-May-2015, L. Piccoli         (lpiccoli)
#        18-Nov-2015, A. Babbitt         (ababbitt)
#               2017, J. Mock            (jmock)
#               2018, W. Williams        (ernesto)
#               2020, R. Reno            (rreno)
#      
#==============================================================
R3.8.3    24 June 2022   J. Mock (jmock)
    * Fix problem with UNIT vs LOOP macro in database files:
        * LOOP should refer to the FBCK:FBXX:LOOP PVs
        * UNIT should refer to SIOC:AREA:UNIT PVs.  Before
            UNIT was being set to LOOP instead of the SIOC unit name,
            leading to duplicates

R3.8.2    24 June 2022   J. Mock (jmock)
    * Fix typo with sink size

R3.8.1    24 June 2022   J. Mock (jmock)
    * Fix typo with sink size

R3.8.0    24 June 2022   J. Mock (jmock)
    * Add BsaCore functionality to Loop.cc to send state data to BSA facility
    * Add BSA PVs to sioc-unds-tr02, sioc-undh-tr02, sioc-sys0-lg01

R3.7.3:   18-March-2021, J. Mock (jmock):
    * Change S<NUM>P1AVG number of average points from 10 to 120

R3.7.2:   3-March-2021, J. Mock (jmock):
    * Stop sending messages to the message log

R3.7.1:   21-Jan-2021, J. Mock (jmock):
    * Add HXR and SXR timing variables to make it easier to script changes

R3.7.0:   18-Nov-2020, J. Mock (jmock) and R. Reno (rreno):
    * Change UNIT env variable of sioc-unds-tr01 from TR02 to TR01.
    * Add sioc-ltus-tr02 120Hz fast LTU feedback for reporting STATES to BLD.

R3.6.0:   30-Oct-2020, R. Reno (rreno):
    * Extend Actuator Reference and Offset Autosave feature to save all patterns.
    * Move convergence status and actuator save from sioc-sys0-fb01 into each loop IOC.

R3.5.0:   05-Oct-2020, R. Reno (rreno):
    * Add PVs for querying destination of a pattern of interst.
      eg:
      FBCK:FB04:LG01:POI1_DEST

R3.4.0:   21-September-2020, K. Luchini (luchini):
    * Add cpuBoot directory